<resources>
    <string name="app_name">蓝道能源</string>
<!--    <string name="app_name">蓝道能源测试版</string>-->

    <string name="auth_username">请输入手机号</string>
    <string name="auth_validation">请输入身份证后6位</string>

    <string name="login">登录</string>
    
    <string name="information"></string>

    <string name="consume">消费记录</string>
    <string name="recharge">充值记录</string>
    <string name="station">电站</string>
    <string name="account">我的账户</string>

    <string name="back">＜返回</string>
    <string name="myaccount">＜ 我的账户</string>
    <string name="coupon">优惠券</string>
    <string name="message">通知消息</string>
    <string name="system_notice">系统通知</string>
    <string name="post_message">推送消息</string>
    <string name="show_list">显示列表</string>

    <string name="qrcode">我的二维码</string>
    <string name="team">我的团队</string>


    <string name="action_settings">设置</string>

    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>

    <string name="mis_folder_all">所有照片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有系统相机</string>
    <string name="mis_msg_amount_limit">已经达到最高选择数量</string>
    <string name="mis_action_done">完成</string>
    <string name="mis_photo_unit">张</string>
    <string name="mis_tip_take_photo">拍摄照片</string>
    <string name="mis_error_image_not_exist">图片错误</string>
    <string name="mis_error_no_permission">无权限</string>
    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale">浏览图片需要您提供浏览存储的权限</string>
    <string name="mis_permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>

</resources>
