<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/message_tab_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/transparent">

        <LinearLayout
            android:id="@+id/message_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/message_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/text_white"
                android:text="@string/myaccount"/>

            <TextView
                android:id="@+id/message_top_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/text_white"
                android:text="@string/message"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/text_white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/text_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_type"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:background="@color/text_white">

        <LinearLayout
            android:id="@+id/message_type_chose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/system_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/system_notice"
                android:textSize="16dp"/>

            <TextView
                android:id="@+id/post_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/post_message"
                android:textSize="16dp"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/system_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:id="@+id/post_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/message_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_white" />

    <FrameLayout
        android:id="@+id/message_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bottom"
        android:background="@color/light_black">
    </FrameLayout>
</RelativeLayout>