<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<RelativeLayout-->
        <!--android:id="@+id/tab_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:background="@color/transparent">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/top"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal" >-->

            <!--<TextView-->
                <!--android:id="@+id/city_name"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:clickable="false"-->
                <!--android:gravity="center"-->
                <!--android:textSize="14dp"-->
                <!--android:textColor="@color/text_white"-->
                <!--android:text=""/>-->

            <!--<TextView-->
                <!--android:id="@+id/txt_top"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="2"-->
                <!--android:gravity="center"-->
                <!--android:textSize="16dp"-->
                <!--android:textColor="@color/text_white"-->
                <!--android:text="@string/information"/>-->

            <!--<TextView-->
                <!--android:id="@+id/quit"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:textSize="14dp"-->
                <!--android:textColor="@color/text_white"-->
                <!--android:text="更多"/>-->

        <!--</LinearLayout>-->

    <!--</RelativeLayout>-->

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_consume"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_consume"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_consume_text"
            android:text="@string/consume"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/txt_recharge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_recharge"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_recharge_text"
            android:text="@string/recharge"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/txt_station"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_station"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_station_text"
            android:text="@string/station"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/txt_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_account"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_account_text"
            android:text="@string/account"
            android:textSize="13dp"/>

    </LinearLayout>
    
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_white"
        android:layout_above="@id/tab_menu"/>
    
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_menu"
        android:background="@color/fragment_background_color">
    </FrameLayout>
</RelativeLayout>
